web: fix site-shell being cut off when not full height

--- a/web/src/authentik.css
+++ b/web/src/authentik.css
@@ -85,6 +85,10 @@ select[multiple] {
     z-index: auto !important;
 }
 
+.pf-c-page__main {
+    display: block;
+}
+
 @media (prefers-color-scheme: dark) {
     :root {
         --ak-dark-foreground: #fafafa;
